--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,4 @@
 server.port = 8088
 spring.data.mongodb.uri=mongodb://root:piggy123@10.138.0.2:27017/admin
-#order.events.topic=orderProdEvents
+order.events.topic=orderProdEvents
 partner.api.get.partner.by.id=http://piggyback-partner-service:8080/partner
-order.events.topic=orderEvents
