--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,4 @@ spring.cloud.gcp.credentials.location=file:/app/config/secret.json
 spring.data.mongodb.uri=mongodb://root:example@piggyback-dev-runner-mongo-1:27017/admin
 order.events.topic=orderEvents
 partner.api.get.partner.by.id=http://partner:8085/partner
+users.api.userValid=http://user:8083/user
