--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 server.port = 8088
-spring.cloud.gcp.project-id=absolute-text-251105
-spring.cloud.gcp.credentials.location=file:/app/config/secret.json
+
 spring.data.mongodb.uri=mongodb://root:example@piggyback-dev-runner-mongo-1:27017/admin
+
 order.events.topic=orderEvents
+kafka.bootstrap.address=broker:29092
+
 partner.api.get.partner.by.id=http://partner:8085/partner
